Add support for Modelica

--- a/website/src/html/changelog.html
+++ b/website/src/html/changelog.html
@@ -85,6 +85,15 @@
     </p>
     <div class="card">
       <div class="card-content">
+        <span class="card-title">Support for Modelica</span>
+        <div class="card-grid">
+          <p>eclipse-pmd now also supports Modelica, a language to model complex physical systems.</p>
+          <img class="materialboxed" src="img/analyze-modelica.png" alt="Analyze Modelica files">
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-content">
         <span class="card-title">PMD 6.21.0</span>
         <p>The embedded PMD has been updated to version 6.21.0.</p>
       </div>
