--- a/changelog.html
+++ b/changelog.html
@@ -77,6 +77,31 @@
 
   <div class="container">
 
+    <h2>eclipse-pmd 1.26</h2>
+    <p class="muted">
+      <small>Release: 25.1.2020</small>
+      <br />
+      <small>Eclipse repository: http://www.acanda.ch/eclipse-pmd/release/1.26</small>
+    </p>
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">Support for Modelica</span>
+        <div class="card-grid">
+          <p>eclipse-pmd now also supports Modelica, a language to model complex physical systems.</p>
+          <img class="materialboxed" src="img/analyze-modelica.png" alt="Analyze Modelica files">
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">PMD 6.21.0</span>
+        <p>The embedded PMD has been updated to version 6.21.0.</p>
+      </div>
+      <div class="card-action">
+        <a href="#pmd-release-notes" class="modal-trigger" data-url="releasenote-pmd-6.21.0.md">Release Notes</a>
+      </div>
+    </div>
+
     <h2>eclipse-pmd 1.25</h2>
     <p class="muted">
       <small>Release: 2.12.2019</small>
