--- a/website/src/html/changelog.html
+++ b/website/src/html/changelog.html
@@ -77,6 +77,22 @@
 
   <div class="container">
 
+    <h2>eclipse-pmd 1.27</h2>
+    <p class="muted">
+      <small>Release: 13.3.2020</small>
+      <br />
+      <small>Eclipse repository: http://www.acanda.ch/eclipse-pmd/release/1.27</small>
+    </p>
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">PMD 6.22.0</span>
+        <p>The embedded PMD has been updated to version 6.22.0.</p>
+      </div>
+      <div class="card-action">
+        <a href="#pmd-release-notes" class="modal-trigger" data-url="releasenote-pmd-6.22.0.md">Release Notes</a>
+      </div>
+    </div>
+
     <h2>eclipse-pmd 1.26</h2>
     <p class="muted">
       <small>Release: 25.1.2020</small>
